# dbdoc

./: .claudeignore  .envrc  .gitignore  CLAUDE.md  ENHANCEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  KNOWN_ISSUES.md  README.md  cleanup_test_db.py  create_test_db.py  dbdoc.db  migrate_database.py  pyproject.toml  schema_scribe.db  test_ecommerce.db  test_enhancements.py  test_final_improvements.py  test_multidb.py
.claude/: settings.local.json
dbdoc/: main.py
dbdoc/api/: __init__.py
dbdoc/core/: __init__.py  catalog_manager.py
dbdoc/models/: __init__.py  ai_content.py  base.py  catalog.py
dbdoc/services/: ai_service.py  relationship_detector.py
dbdoc/web/templates/: base.html  catalog.html  enhanced_catalog.html  table.html
docs/: ENHANCEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  QUICK_START_IMPROVEMENTS.md  README.md  idea.md
schema_scribe/: __init__.py  main.py
schema_scribe/api/: endpoints.py  main.py  schemas.py
schema_scribe/core/: catalog_manager.py
schema_scribe/models/: __init__.py  base.py  catalog.py
schema_scribe/services/: __init__.py  async_generation_engine.py  data_profiler.py  database_connector.py  enhanced_ai_service.py  enhanced_context_builder.py  erd_generator.py  job_manager.py  multi_db_connector.py
schema_scribe/web/templates/: index.html
scripts/: migrate_database.py
tests/: cleanup_test_db.py  create_test_db.py  test_enhancements.py  test_final_improvements.py  test_multidb.py
